Favicon added, fonts changed to woff2, testing mockend

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Королёв Сергей - Личный сайт</title>
 
     <link rel="stylesheet" href="reset.css">
@@ -12,6 +13,7 @@
 
     <script defer src="medium-zoom.min.js"></script>
     <script defer src="main.js"></script>
+    <!-- <script defer src="lazy load.js"></script> -->
 </head>
 
 <body>
@@ -193,7 +195,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/11.jpg" alt="Изображение">
+                <img src="images/11.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -206,7 +208,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/12.jpg" alt="Изображение">
+                <img src="images/12.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -219,7 +221,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/13.jpg" alt="Изображение">
+                <img src="images/13.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -232,7 +234,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/14.jpg" alt="Изображение">
+                <img src="images/14.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -245,7 +247,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/15.jpg" alt="Изображение">
+                <img src="images/15.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -258,7 +260,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/16.jpg" alt="Изображение">
+                <img src="images/16.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -271,7 +273,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/17.jpg" alt="Изображение">
+                <img src="images/17.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -291,7 +293,7 @@
         </div>
         <div class="gallery">
             <div class="gallery__item">
-                <img src="images/18.jpg" alt="Изображение">
+                <img src="images/18.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -304,7 +306,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/19.jpg" alt="Изображение">
+                <img src="images/19.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -317,7 +319,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/20.jpg" alt="Изображение">
+                <img src="images/20.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -330,7 +332,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="images/21.jpg" alt="Изображение">
+                <img src="images/21.jpg" loading="lazy" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
