API Images Added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <script defer src="medium-zoom.min.js"></script>
     <script defer src="main.js"></script>
-    <!-- <script defer src="lazy load.js"></script> -->
+    <script defer src="api.js"></script>
+    <script defer src="lazy load.js"></script>
+
 </head>
 
 <body>
