Js finished, html pages added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Королёв Сергей - Личный сайт</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/main.css">
 
-    <script defer src="medium-zoom.min.js"></script>
-    <script defer src="main.js"></script>
-    <script defer src="lazyload.js"></script>
-    <script defer src="api.js"></script>
+    <script defer src="js/medium-zoom.min.js"></script>
+    <script defer src="js/main.js"></script>
+    <script defer src="js/lazyload.js"></script>
+    <script defer src="js/api.js"></script>
 
 </head>
 
@@ -34,12 +34,12 @@
         </div>
         <nav class="header__nav">
             <ul class="header__items">
-                <li class="header__item header__item_active"><a href="#">Главная</a></li>
-                <li class="header__item"><a href="#">Портреты</a></li>
-                <li class="header__item"><a href="#">Пейзажи</a></li>
-                <li class="header__item"><a href="#">Графика</a></li>
-                <li class="header__item"><a href="#">Скульптуры</a></li>
-                <li class="header__item"><a href="#">Настенная живопись</a></li>
+                <li class="header__item header__item_active"><a>Главная</a></li>
+                <li class="header__item"><a href="portraits.html">Портреты</a></li>
+                <li class="header__item"><a href="landscapes.html">Пейзажи</a></li>
+                <li class="header__item"><a href="graphics.html">Графика</a></li>
+                <li class="header__item"><a href="sculptures.html">Скульптуры</a></li>
+                <li class="header__item"><a href="murals.html">Настенная живопись</a></li>
                 <li class="header__item"><a href="about.html">Контакты / Обо мне</a></li>
             </ul>
         </nav>
@@ -63,61 +63,19 @@
         </nav>
     </header>
     <main class="gallery__wrap">
-        <div class="gallery">
-            <div class="gallery__item">
-                <img src="images/1.jfif" alt="Изображение">
-                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
-                <div class="gallery__item-details">
-                    <div class="gallery__item-info">
-                        <h2 class="gallery__item-headline">Заголовок</h2>
-                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
-                            saepe
-                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
-                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gallery__item">
-                <img src="images/9.jpg" alt="Изображение">
-                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
-                <div class="gallery__item-details">
-                    <div class="gallery__item-info">
-                        <h2 class="gallery__item-headline">Заголовок</h2>
-                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
-                            saepe
-                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
-                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="gallery">
-            <div class="gallery__item">
-                <img src="images/18.jpg" loading="lazy" alt="Изображение">
-                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
-                <div class="gallery__item-details">
-                    <div class="gallery__item-info">
-                        <h2 class="gallery__item-headline">Заголовок</h2>
-                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
-                            saepe
-                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
-                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="gallery"></div>
+        <div class="gallery"></div>
+        <div class="gallery"></div>
     </main>
     <footer class="footer">
         <nav class="footer__nav">
             <ul class="footer__items">
-                <li class="footer__item"><a href="#">Портреты</a></li>
-                <li class="footer__item"><a href="#">Пейзажи</a></li>
-                <li class="footer__item"><a href="#">Графика</a></li>
-                <li class="footer__item"><a href="#">Скульптуры</a></li>
-                <li class="footer__item"><a href="#">Настенная живопись</a></li>
-                <li class="footer__item"><a href="#">Обо мне 🎨</a></li>
+                <li class="footer__item"><a href="portraits.html">Портреты</a></li>
+                <li class="footer__item"><a href="landscapes.html">Пейзажи</a></li>
+                <li class="footer__item"><a href="graphics.html">Графика</a></li>
+                <li class="footer__item"><a href="sculptures.html">Скульптуры</a></li>
+                <li class="footer__item"><a href="murals.html">Настенная живопись</a></li>
+                <li class="footer__item"><a href="about.html">Обо мне 🎨</a></li>
             </ul>
         </nav>
     </footer>
