--- a/sculptures.html
+++ b/sculptures.html
@@ -22,15 +22,13 @@
     <header class="header">
         <div class="header__wrap">
             <div class="header__main-logo">
-                <a href="#">
-                    <svg width="11rem" height="7.6rem">
+                <a href="index.html">
+                    <svg class="header__main-logo-svg" width="11rem" height="7.6rem">
                         <use xlink:href="#main-logo"></use>
                     </svg>
                 </a>
             </div>
-            <h1 class="header__about">
-                <a href="#">Королёв Сергей - Художник, скульптор</a>
-            </h1>
+            <h1 class="header__about">Скульптуры</h1>
         </div>
         <nav class="header__nav">
             <ul class="header__items">
@@ -38,7 +36,7 @@
                 <li class="header__item"><a href="portraits.html">Портреты</a></li>
                 <li class="header__item"><a href="landscapes.html">Пейзажи</a></li>
                 <li class="header__item"><a href="graphics.html">Графика</a></li>
-                <li class="header__item header__item_active"><a>Скульптуры</a></li>
+                <li class="header__item header__item_active">Скульптуры</li>
                 <li class="header__item"><a href="murals.html">Настенная живопись</a></li>
                 <li class="header__item"><a href="about.html">Контакты / Обо мне</a></li>
             </ul>
@@ -83,7 +81,7 @@
     <svg style="display:none">
         <symbol id="main-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 204.000000 170.000000"
             preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0.000000,170.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
+            <g transform="translate(0.000000,170.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
                 <path d="M1559 1655 c-44 -24 -45 -46 -5 -80 19 -16 38 -42 41 -57 6 -24 1
     -33 -31 -60 -91 -78 -144 -158 -144 -220 0 -18 -5 -28 -14 -28 -25 0 -46 -30
     -46 -65 0 -22 13 -53 40 -93 36 -53 40 -66 40 -120 0 -41 5 -63 15 -72 11 -9
