Mobile navigation fixed

--- a/about.html
+++ b/about.html
@@ -40,20 +40,21 @@
         </nav>
         <nav class="header__nav-mobile">
             <ul>
-                <li class="header__item-mobile header__item-group-mobile"><a href="#">Картины</a></li>
+                <li class="header__item-mobile header__item-group-mobile"><a>Картины</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden">
+                    <a href="index.html">Главная</a>
+                </li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Главная</a></li>
+                        href="portraits.html">Портреты</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Портреты</a></li>
+                        href="landscapes.html">Пейзажи</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Пейзажи</a></li>
+                        href="graphics.html">Графика</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Графика</a></li>
+                        href="sculptures.html">Скульптуры</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Скульптуры</a></li>
-                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
-                        href="#">Настенная живопись</a></li>
-                <li class="header__item-mobile"><a href="#">Контакты / Обо мне</a></li>
+                        href="murals.html">Настенная живопись</a></li>
+                <li class="header__item-mobile">Контакты / Обо мне</li>
             </ul>
         </nav>
     </header>
